--- a/Node.js/index.html
+++ b/Node.js/index.html
@@ -10,3 +10,26 @@
         <script src="/js/chat.js"></script>
     </body>
 </html>
+
+
+
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+<!DOCTYPE html>
+<html>
+    <head>
+        
+    </head>
+    <body>
+        Chat App
+
+        <form id="message-form">
+            <input placeholder="Message">
+            <button>Send</button>
+        </form>
+
+
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="/js/chat.js"></script>
+    </body>
+</html>
+
