--- a/Node.js/index.html
+++ b/Node.js/index.html
@@ -144,7 +144,11 @@
 
 
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
+<script id="location-message-template" type="text/html">
+            <div>
+                <p>{{createdAt}} - <a href="{{url}}" target="_blank">My current location</a></p>
+            </div>
+        </script>
 
 
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
